spinner et json ok

--- a/html_templates/index.html
+++ b/html_templates/index.html
@@ -1,7 +1,14 @@
 <html>
 <body>
-<H1>pyplot demo</H1>
-<img src="{{ img }}"/>
+<H1>List of charts demo</H1>
+<br>
+<table>
+<hr><hd><a href="/matplotlib_demo">use simple dataset, send chart as image</a></td></tr>
+<hr><hd><a href="/csv/daily-min-temperatures">use public temperature dataset, send chart as image</a></td></tr>
+<hr><hd><a href="/csv/daily-total-female-births">use public birth dataset, send chart as image</a></td></tr>
+<hr><hd><a href="/static/canvas.html">use canvas container, feed data via forbes API</a></td></tr>
+<hr><hd><a href="/static/canvas2.html">use canvas container, feed data from application in json format</a></td></tr>
+<hr><hd><a href="/static/canvas3.html">same as above with a spinner</a></td></tr>
+</table>
 </body>
 </html>
-
