add multi charts

--- a/html_templates/index.html
+++ b/html_templates/index.html
@@ -9,6 +9,7 @@
 <hr><hd><a href="/static/canvas.html">use canvas container, feed data via forbes API</a></td></tr>
 <hr><hd><a href="/static/canvas2.html">use canvas container, feed data from application in json format</a></td></tr>
 <hr><hd><a href="/static/canvas3.html">same as above with a spinner</a></td></tr>
+<hr><hd><a href="/static/4canvas.html">4 independant charts</a></td></tr>
 </table>
 </body>
 </html>
